Bug 1196479 - Fire selectstart and selectionchange events on the input node when the selection in that editor changes. r=ehsan